# pyrsspipe

./: .gitignore  README.md  makefeed.py  pyproject.toml  pyrsspipe.py  rsspipe.py  validation.py
.github/workflows/: build_on_tag.yaml.yml  build_on_tag.yml
in/: archivelink.py  dailybuffer.py  discord.py
input/: archivelink.py  dailybuffer.py  discord.py  patreon.py
output/: local.py  out.py  s3.py
pyrsspipe/: config_creator.py  makefeed.py  pyrsspipe.py  validation.py
pyrsspipe/input/: archivelink.py  base.py  dailybuffer.py  dailydigest.py  digest.py  discord.py  patreon.py  xpath.py
pyrsspipe/output/: base.py  local.py  s3.py
