[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyrsspipe"
version = "12"
description = "A toolkit for working with RSS feeds"
authors = ["Raman Malykhin"]
packages = [
    {include = "pyrsspipe"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
feedparser = "6.0.10"
boto3 = "^1.34.14"
discord_markdown = "0.4.0"
rfeed = "1.0.0"
lxml = "4.9.4"
pydantic = "^2.10.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
pyrsspipe-run = "pyrsspipe.pyrsspipe:pyrsspipe"
pyrsspipe-create = "pyrsspipe.config_creator:create_pipeconfig"
